--- a/.github/workflows/deploy-test.yml
+++ b/.github/workflows/deploy-test.yml
@@ -1,10 +1,10 @@
-name: Workflows with large secrets
+name: Despliega a test
 
 on: push
 
 jobs:
   my-job:
-    name: My Job
+    name: Test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
