--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -4,7 +4,7 @@ on: push
 
 jobs:
   my-job:
-    name: Test
+    name: Prod
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
