--- a/.github/workflows/deploy-test.yml
+++ b/.github/workflows/deploy-test.yml
@@ -20,3 +20,13 @@ jobs:
       # not hide secrets that use this workaround.
       - name: Test printing your secret (Remove this step in production)
         run: cat $HOME/secrets/secret-test.json
+      - name: rsync deployments
+        uses: burnett01/rsync-deployments@5.1
+        with:
+          switches: -avzr --delete
+          path: src/
+          remote_path: /var/www/html/
+          remote_host: 181.1.65.176
+          remote_port: 22127
+          remote_user: root
+          remote_key: ${{ secrets.TEST_DEPLOY_KEY }}
