--- a/.github/workflows/deploy-test.yml
+++ b/.github/workflows/deploy-test.yml
@@ -22,12 +22,22 @@ jobs:
         run: |
           pwd
           cp $HOME/secrets/secret-test.json src/
-      - name: rsync deployments
+      - name: rsync web files
         uses: burnett01/rsync-deployments@5.1
         with:
           switches: -avzr --delete
           path: src/
           remote_path: /var/www/html/
+          remote_host: 181.1.65.176
+          remote_port: 22127
+          remote_user: root
+          remote_key: ${{ secrets.DEPLOY_TEST_KEY }}
+      - name: rsync config
+        uses: burnett01/rsync-deployments@5.1
+        with:
+          switches: -avzr --delete
+          path: conf/
+          remote_path: /root
           remote_host: 181.1.65.176
           remote_port: 22127
           remote_user: root
