--- a/.github/workflows/deploy-test.yml
+++ b/.github/workflows/deploy-test.yml
@@ -20,23 +20,23 @@ jobs:
       # not hide secrets that use this workaround.
       - name: Test printing your secret (Remove this step in production)
         run: cp $HOME/secrets/secret-test src/
-      - name: rsync web files
-        uses: burnett01/rsync-deployments@5.1
-        with:
-          switches: -avzr --delete
-          path: src/
-          remote_path: /var/www/html/
-          remote_host: ${{ secrets.HOST_TEST }}
-          remote_port: ${{ secrets.PASSWORD_TEST }}
-          remote_user: ${{ secrets.USER_TEST }}
-          remote_key: ${{ secrets.DEPLOY_TEST_KEY }}
-      - name: rsync config
-        uses: burnett01/rsync-deployments@5.1
-        with:
-          switches: -avzr
-          path: conf/
-          remote_path: /root
-          remote_host: 181.1.65.176
-          remote_port: 22127
-          remote_user: root
-          remote_key: ${{ secrets.DEPLOY_TEST_KEY }}
+      #- name: rsync web files
+      #  uses: burnett01/rsync-deployments@5.1
+      #  with:
+      #    switches: -avzr
+      #    path: src/
+      #    remote_path: /var/www/html/
+      #    remote_host: ${{ secrets.TEST_HOST }}
+      #    remote_port: ${{ secrets.TEST_PORT }}
+      #    remote_user: ${{ secrets.TEST_USER }}
+      #    remote_key: ${{ secrets.TEST_DEPLOY_KEY }}
+      #- name: rsync config
+      #  uses: burnett01/rsync-deployments@5.1
+      #  with:
+      #    switches: -avzr
+      #    path: conf/
+      #    remote_path: /root
+      #    remote_host: ${{ secrets.TEST_HOST }}
+      #    remote_port: ${{ secrets.TEST_PORT }}
+      #    remote_user: ${{ secrets.TEST_USER }}
+      #    remote_key: ${{ secrets.TEST_DEPLOY_KEY }}
