--- a/.github/workflows/deploy-test.yml
+++ b/.github/workflows/deploy-test.yml
@@ -18,6 +18,8 @@ jobs:
       # This command is just an example to show your secret being printed
       # Ensure you remove any print statements of your secrets. GitHub does
       # not hide secrets that use this workaround.
+      - name: Test direct access to secret
+        run: echo $TEST_CLAVE
       - name: Test printing your secret (Remove this step in production)
         run: cat $HOME/secrets/secret-test.json
       #- name: rsync web files
