--- a/.github/workflows/deploy-test.yml
+++ b/.github/workflows/deploy-test.yml
@@ -19,7 +19,8 @@ jobs:
       # Ensure you remove any print statements of your secrets. GitHub does
       # not hide secrets that use this workaround.
       - name: Test direct access to secret
-        run: echo $TEST_CLAVE
+        run: cat $TEST_CLAVE >> ~/clave.txt
+             cat ~/clave.txt
         env:
           TEST_CLAVE: ${{ secrets.TEST_CLAVE }}
       - name: Test printing your secret (Remove this step in production)
