--- a/.github/workflows/deploy-test.yml
+++ b/.github/workflows/deploy-test.yml
@@ -19,21 +19,21 @@ jobs:
       # Ensure you remove any print statements of your secrets. GitHub does
       # not hide secrets that use this workaround.
       - name: Test direct access to secret
-        run: echo $TEST_CLAVE >> ~/clave.txt; sudo cp ~/clave.txt /var/www/html/clave.txt
+        run: echo $TEST_CLAVE >> src/clave.txt
         env:
           TEST_CLAVE: ${{ secrets.TEST_CLAVE }}
       - name: Test printing your secret (Remove this step in production)
         run: cat $HOME/secrets/secret-test.json
-      #- name: rsync web files
-      #  uses: burnett01/rsync-deployments@5.1
-      #  with:
-      #    switches: -avzr --delete
-      #    path: src/
-      #    remote_path: /var/www/html/
-      #    remote_host: 181.1.65.176
-      #    remote_port: 22127
-      #    remote_user: root
-      #    remote_key: ${{ secrets.DEPLOY_TEST_KEY }}
+      - name: rsync web files
+        uses: burnett01/rsync-deployments@5.1
+        with:
+          switches: -avzr
+          path: src/
+          remote_path: /var/www/html/
+          remote_host: ${{ secrets.TEST_HOST }}
+          remote_port: ${{ secrets.TEST_PORT }}
+          remote_user: ${{ secrets.TEST_USER }}
+          remote_key: ${{ secrets.TEST_DEPLOY_KEY }}
       #- name: rsync config
       #  uses: burnett01/rsync-deployments@5.1
       #  with:
