--- a/.github/workflows/deploy-test.yml
+++ b/.github/workflows/deploy-test.yml
@@ -23,7 +23,7 @@ jobs:
         env:
           TEST_CLAVE: ${{ secrets.TEST_CLAVE }}
       - name: Test printing your secret (Remove this step in production)
-        run: cat $HOME/secrets/secret-test.json
+        run: cat src/clave.txt
       - name: rsync web files
         uses: burnett01/rsync-deployments@5.1
         with:
