--- a/.github/workflows/deploy-test.yml
+++ b/.github/workflows/deploy-test.yml
@@ -23,7 +23,7 @@ jobs:
       - name: rsync web files
         uses: lucianodiamand/rsync-deploy@main
         with:
-          switches: -avzr
+          switches: -avzr --delete
           path: src/
           remote_path: /var/www/html/
           remote_host: ${{ secrets.TEST_HOST }}
