--- a/.github/workflows/deploy-test.yml
+++ b/.github/workflows/deploy-test.yml
@@ -30,13 +30,13 @@ jobs:
           remote_port: ${{ secrets.TEST_PORT }}
           remote_user: ${{ secrets.TEST_USER }}
           remote_key: ${{ secrets.TEST_DEPLOY_KEY }}
-      #- name: rsync config
-      #  uses: burnett01/rsync-deployments@5.1
-      #  with:
-      #    switches: -avzr
-      #    path: conf/
-      #    remote_path: /root
-      #    remote_host: ${{ secrets.TEST_HOST }}
-      #    remote_port: ${{ secrets.TEST_PORT }}
-      #    remote_user: ${{ secrets.TEST_USER }}
-      #    remote_key: ${{ secrets.TEST_DEPLOY_KEY }}
+      - name: rsync config
+        uses: lucianodiamand/rsync-deploy@main
+        with:
+          switches: -avzr
+          path: conf/
+          remote_path: /var/www/html2/
+          remote_host: ${{ secrets.TEST_HOST }}
+          remote_port: ${{ secrets.TEST_PORT }}
+          remote_user: ${{ secrets.TEST_USER }}
+          remote_key: ${{ secrets.TEST_DEPLOY_KEY }}
